<resources>
    <string name="app_name">Wordy</string>
    <string name="restart">Restart</string>
    <string name="clear">Clear</string>
    <string name="clear_database">Clear Database</string>
    <string name="enter">Enter</string>
    <string name="add_word">Add Word</string>
    <string name="headline">Add a Word!</string>
    <string name="word">Add a word like `games`</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
</resources>