<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/headerTV_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="160dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/lightGrid"
        android:layout_width="365dp"
        android:layout_height="450dp"
        android:layout_centerInParent="true"
        android:columnCount="5"
        android:rowCount="6"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <EditText
            android:id="@+id/et_1"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_2"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:text=""
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_3"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:text=""
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_4"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:text=""
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_5"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:text=""
            android:textSize="50sp" />


        <EditText
            android:id="@+id/et_6"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_7"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:text=""
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_8"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:text=""
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_9"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:text=""
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_10"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:text=""
            android:textSize="50sp" />


        <EditText
            android:id="@+id/et_11"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_12"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:text=""
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_13"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:text=""
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_14"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:text=""
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_15"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:text=""
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_16"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_17"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:text=""
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_18"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:text=""
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_19"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:text=""
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_20"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:text=""
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_21"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_22"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:text=""
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_23"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:text=""
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_24"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:text=""
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_25"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:text=""
            android:textSize="50sp" />


        <EditText
            android:id="@+id/et_26"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_27"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:text=""
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_28"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:text=""
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_29"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:text=""
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_30"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:maxLength="1"
            android:text=""
            android:textSize="50sp" />

    </GridLayout>

    <Button
        android:id="@+id/enter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/enter"
        app:layout_constraintEnd_toStartOf="@+id/button_addWord"
        app:layout_constraintTop_toBottomOf="@+id/lightGrid" />

    <Button
        android:id="@+id/button_restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:text="@string/restart"
        app:layout_constraintEnd_toStartOf="@+id/button_clear"
        app:layout_constraintTop_toBottomOf="@+id/lightGrid" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toStartOf="@+id/button_addWord"
        app:layout_constraintTop_toBottomOf="@+id/enter_button" />

    <Button
        android:id="@+id/button_addWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="48dp"
        android:text="@string/add_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lightGrid" />

</androidx.constraintlayout.widget.ConstraintLayout>